# AnimeTherapistBot

./: .gitignore  .replit  LICENSE  README.md  main.py  personalities.json  personality_loader.py  pyproject.toml  requirements.txt
frontend/: index.html  script.js  style.css
